	Fixed throwing behaviour and power activation bug
Experimental: Enforcer knocks Back and TwoTouch out of lock
Removed canBeKicked() as it's no longer needed
Updated PlayerTwoTouch's ball prediction trail to reflect updated kicking mechanics and some bugfixes:
	Moved velocity update outside of vDelta loop, like it is in Ball
	Enoch forgot to put the FLOORFRICTION code in the predictor like a jerk

7.8.13
Added PlayerBack

7.7.13
Removed PlayerGun
Added PlayerTwin power "assist": kicking with one twin sets up the flash kick on the other
	Needs testing with multiple twins on one team, twins on both teams
Changed the way kicking works
	The magnitude of the kick is now the player's velMag multiplied by NORMALKICK or POWERKICK.
	NORMALKICK and POWERKICK are always over 1.0.
	This hopefully reduces double tapping
	Note: If the player is not moving then the magnitude of the kick is reduced
Kickingcooldown returns, but instead of having balls go through players when they're in cooldown, it nudges the ball like player on player collision
Modified slice.png to be thinner

7.4.13
Added PlayerGun, begun implementation

7.3.13
Minor updates to PlayerTricky's drawing of the fake ball and player: ball and player have separate alphas
Changed PlayerEnforcer's rapid turn graphical effect
Smoothed the camera movement when a PlayerTricky's double fades away

7.2.13
Added PlayerTricky functionality
Added PlayerDummy: An invisible, non colliding Player subclass used primarily for moving the camera
Added BallFake: Identical to Ball except it bounces off goals

7.1.13
Update TwoTouch:
	Getting pushed around in lock is much less slippery
	Fixed ball predictor showing a reflection off a goal
	Ball predictor fades with distance, is squares now, goes for longer
Update Dash:
	Minor bugfix. Releasing short dash with left stick unheld doesn't cause the kick flash and sound fx
	The ball bouncing off a wall no longer cancels gust