@@ -4,7 +4,7 @@ NUMGAMES = 5
 SCREENWIDTH = 800
 SCREENHEIGHT = 600
 FULLSCREEN = 0
-ACTIONCAM = 1
+ACTIONCAM = 0
 
 [0]
 
